[package]
name = "dummy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
env_logger = "0.10.0"
futures = "0.3.26"
lazy_static = "1.4.0"
rayon = "1.6.1"
regex = "1.7.1"
reqwest = "0.11.14"
scraper = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
